linkerd/base_backup_1760836704/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd
  labels:
    linkerd.io/control-plane-ns: linkerd
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-viz
  labels:
    linkerd.io/extension: viz
